Fix spacing of projects

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -508,6 +508,8 @@ input, select, textarea {
 		.row.gtr-150 {
 			margin-top: 0;
 			margin-left: -3em;
+			display: flex;
+			justify-content: space-evenly;
 		}
 
 			.row.gtr-150 > * {
